# zero2prod

./: .gitignore  Cargo.toml  README.md
.github/workflows/: audit.yml  general.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
