[package]
name = "zero2prod"
version = "0.1.0"
authors=["Ayush Bansal"]
edition = "2021"

[lib]
path='src/lib.rs'

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest="0.11"
config = "0.13"

serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-rustls",
"postgres",
"uuid",
"chrono",
"migrate"
]